# light_years

./: CMakeLists.txt  CmakeLists.txt  CmakePresets.json
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
light_years_engine/: CMakeLists.txt
light_years_engine/include/: entry_point.h
light_years_engine/include/framework/: application.h
light_years_engine/src/: entry_point.cpp  using_friend.cpp
light_years_engine/src/framework/: application.cpp
light_years_game/: CMakeLists.txt
light_years_game/include/framework/: game_application.h
light_years_game/src/framework/: game_application.cpp
